--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+
+
+.center{
+  display: flex;
+  justify-content: center;
+}
+
+.particles{
+
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +53,71 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.navbar {
+   min-height: 80px;
+
+}
+a{
+  margin: 20px;
+  text-transform: uppercase;
+}
+.push{
+          margin-left: auto;
+ }
+.icon-account{
+          height: 50px; 
+          width: 50px; 
+        }
+
+.navbar-background{
+  background-color: #2b4162;  
+  background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+
+}
+
+
+#hero {
+    min-height: 100vh;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    border-bottom: 0px;
+    background: #fff;
+    font-weight: 400;
+    color: #272341;
+    padding: 0rem 5.6rem;
+    margin-bottom: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
+
+#hero .hero-cta a {
+    font-size: 2.4rem;
+}
+
+
+.cta-btn--hero {
+    color: #00cdac;
+    -webkit-text-fill-color: #00cdac;
+    border: 2px solid transparent;
+    border-image: linear-gradient(
+      135deg
+      , #02aab0 0%, #00cdac 100%);
+    border-image-slice: 1;
+}
+
+.cta-btn {
+    display: inline-block;
+    position: relative;
+    padding: 0.8rem 1.6rem;
+    font-weight: bold;
+    line-height: 1;
+    z-index: 1;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
 }
