--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Helvetica Narrow, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+/*	background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);*/
+  background-color: #2b4162;
+  background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+      .navbar {
+            min-height: 80px;
+
+        }
+        a{
+          margin: 20px;
+          text-transform: uppercase;
+        }
+        .push{
+          margin-left: auto;
+        }
+        .icon-account{
+          height: 50px; 
+          width: 55px; 
+        }
